# EdgeView

./: README.md  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/example/edgeview/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edgeview.cpp  native_utils.cpp  native_utils.h  process.cpp
app/src/main/java/com/example/edgeview/: CameraFrameProvider.java  MainActivity.java  NativeLib.java
app/src/main/java/com/example/edgeview/gl/: GLRenderer.java
app/src/main/jniLibs/arm64-v8a/: .placeholder
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/edgeview/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  main.ts  package.json
